--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,14 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  /* rose */
+  --color-fem-rose-800: #7a284e;
+  --color-fem-rose-50: #fff7fb;
+  /* stone */
+  --color-fem-stone-900: #312e2c;
+  --color-fem-stone-600: #5f564d;
+  --color-fem-stone-150: #e3ddd7;
+  --color-fem-stone-100: #f3e5d7;
+  /* brown */
+  --color-fem-brown-800: #854632;
 }
